# Catto

./: .gitignore  LICENSE  Readme.md  changelog.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
catto/: __init__.py
catto-output/: catto-interactive-output.cast
catto/core/: __init__.py  downloader.py  interactive.py
catto/utils/: enums.py  helpers.py
src/catto/: __init__.py  __main__.py
src/catto/core/: __init__.py  api.py  downloader.py  interactive.py
src/catto/utils/: __init__.py  enums.py  exceptions.py  helpers.py
tests/: confest.py  test_download.py  test_help.py  test_logo.py  test_show_all_animals.py  test_show_all_categories.py  test_status.py  test_version.py
