[tool.poetry]
name = "catto"
version = "1.0.4"
authors = ["KortaPo"]
description = "A command line tool for downloading random cute animal images."
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"
Pillow = "^9.0.1"
questionary = "^1.10.0"
pyfiglet = "^0.8.post1"
requests = "^2.27.1"
colorama = "^0.4.4"
click = "^8.0.4"
typer = "^0.4.1"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pyright = "^1.1.227"
isort = "^5.10.1"
mypy = "^0.931"
coverage = "^6.4.1"
pytest = "^7.1.2"
taskipy = "^1.10.2"

[tool.black]
line-length = 120

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "catto",
    "tests",
]
ignore = [
    "setup.py",
]

[tool.isort]
profile = "black"
py_version = 38
line_length = 100
combine_as_imports = true
filter_files = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
