[tool.poetry]
name = "catto"
version = "1.0.5"
authors = ["KortaPo <bereckobrian@gmail.com>"]
description = "Catto is a command line program that downloads random cute animal images, gifs and videos based on your choices. This tool is written in `python` and uses [Typer](https://typer.tiangolo.com/) command line framework."
license = "GNU GENERAL PUBLIC LICENSE"
readme = "Readme.md"

exclude = [".mypy_cache", "gallery", "dist", ".flake8", "requirements-dev.txt", "tests", ".coverage",
    ".pytest_cache", "nox_testing.py"
]
include = ["LICENSE", "Readme.md"]


[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.6.1"
rich = "^12.5.1"
questionary = "^1.10.0"
Pillow = "^9.2.0"
loguru = "^0.6.0"
httpx = "^0.23.0"
pyfiglet = "^0.8.post1"
colorama = "^0.4.5"

[tool.poetry.group.dev.dependencies]
black = "22.1.0"
pyright = "1.1.227"
isort = "5.10.1"
mypy = "0.931"
coverage = "6.4.1"
pytest = "7.1.2"
taskipy = "1.10.2"
pdoc3 = "0.10.0"
nox = "2022.8.7"
codespell = "2.2.1"
commitizen = "2.33.1"

[tool.black]
line-length = 80
target-version = ['py311', "py310"]
skip-magic-trailing-comma=true

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "src",
    "*.py",
]
ignore = [
    "setup.py",
    "dist",
    "gallery",
    "tests"
]


reportUnnecessaryTypeIgnoreComment = true
reportPrivateUsage = false
reportMissingTypeStubs = false


[tool.isort]
profile = "black"
py_version = 311
line_length = 80
combine_as_imports = true
filter_files = true

[tool.poetry.scripts]
catto = "catto:app"


[tool.taskipy.tasks]
export-requirements = "poetry export -f requirements.txt --output requirements.txt --without-hashes"
export-requirements-dev = "poetry export -f requirements.txt --output requirements-dev.txt --without-hashes --with dev"
precommit-lint = "pre-commit run --all-files"
flake = "flake8 ."
precommit-install = "pre-commit install"
tests = "cd tests && pytest --log-format='%(asctime)s %(levelname)s %(message)s' --log-date-format='%Y-%m-%d %H:%M:%S' && cd .."


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
