[metadata]
name = Catto
version = 1.0.5
author = KortaPo
author_email = bereckobrian@gmail.com
url = https://github.com/KortaPo/Catto
description = Catto is a command line program that downloads random cute animal images, gifs and videos based on your choices. This tool is written in `python` and uses [Typer](https://typer.tiangolo.com/) command line framework.
long_description = file: Readme.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE
license_file = LICENSE
platform = any
keywords = catto fun cats CLI
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU LICENSE
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
project_urls =
    Bug Tracker = https://github.com/KortaPo/Catto/issues
    Source Code = https://github.com/KortaPo/Catto
    Changelog = https://github.com/KortaPo/Catto/changelog

[options]
python_requires = >= 3.10
package_dir =
    =src
packages = find:
test_suite = tests
install_requires =
    anyio==3.6.2 ; python_version >= "3.11" and python_version < "4.0"
    certifi==2022.12.7 ; python_version >= "3.11" and python_version < "4.0"
    click==8.1.3 ; python_version >= "3.11" and python_version < "4.0"
    colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0"
    commonmark==0.9.1 ; python_version >= "3.11" and python_version < "4.0"
    h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
    httpcore==0.16.2 ; python_version >= "3.11" and python_version < "4.0"
    httpx==0.23.1 ; python_version >= "3.11" and python_version < "4.0"
    idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
    loguru==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
    pillow==9.3.0 ; python_version >= "3.11" and python_version < "4.0"
    prompt-toolkit==3.0.36 ; python_version >= "3.11" and python_version < "4.0"
    pyfiglet==0.8.post1 ; python_version >= "3.11" and python_version < "4.0"
    pygments==2.13.0 ; python_version >= "3.11" and python_version < "4.0"
    questionary==1.10.0 ; python_version >= "3.11" and python_version < "4.0"
    rfc3986[idna2008]==1.5.0 ; python_version >= "3.11" and python_version < "4.0"
    rich==12.6.0 ; python_version >= "3.11" and python_version < "4.0"
    sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
    typer==0.6.1 ; python_version >= "3.11" and python_version < "4.0"
    wcwidth==0.2.5 ; python_version >= "3.11" and python_version < "4.0"
    win32-setctime==1.1.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform == "win32"

setup_requires =
    setuptools
zip_safe = false
include_package_data = true

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest >= 7.1.2
    pytest-cov >= 3.0.0
    mypy >= 0.961
    flake8 >= 4.0.1

[options.package_data]
catto = py.typed
